z-index translateZ fix

--- a/Template/src/sass/_main-menu.sass
+++ b/Template/src/sass/_main-menu.sass
@@ -29,7 +29,6 @@ nav
   height: 60px
   width: 60px
   left: 80%
-  z-index: 9999
   position: fixed
   transition: all 1s ease-in-out
 
@@ -94,7 +93,6 @@ nav
   background: #333333
   text-align: center
   font-size: 35px
-  z-index: 9003
 
 .navA
   text-align: center
